--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,8 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Log into registry
         run: echo "${{ secrets.DOCKERHUB_ACCESS_TOKEN }}" | docker login -u stevapple --password-stdin
-      - name: Build and release
-        run: |
-          cd ${{ github.event.inputs.version }}
-          docker build -t stevapple/swift-scf:${{ github.event.inputs.version }} .
-          docker push stevapple/swift-scf:${{ github.event.inputs.version }}
+      - name: Build
+        run: docker build -t stevapple/swift-scf:${{ github.event.inputs.version }} ${{ github.event.inputs.version }}
+      - name: Release
+        run: docker push stevapple/swift-scf:${{ github.event.inputs.version }}
