--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -12,8 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Log into registry
         run: echo "${{ secrets.DOCKERHUB_ACCESS_TOKEN }}" | docker login -u stevapple --password-stdin
-      - name: Build and release nightly
-        run: |
-          cd nightly
-          docker build -t stevapple/swift-scf:nightly .
-          docker push stevapple/swift-scf:nightly
+      - name: Build nightly
+        run: docker build -t stevapple/swift-scf:nightly nightly
+      - name: Release
+        run: docker push stevapple/swift-scf:nightly
