--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -10,9 +10,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Log into registry
-        run: echo "${{ secrets.DOCKERHUB_ACCESS_TOKEN }}" | docker login -u stevapple --password-stdin
-      - name: Build nightly
-        run: docker build -t stevapple/swift-scf:nightly nightly
-      - name: Release
-        run: docker push stevapple/swift-scf:nightly
+      - name: Trigger Autobuild
+        run: curl -XPOST ${{ secrets.DOCKERHUB_TRIGGER_ENDPOINT }}
