Remove `yum update`

--- a/5.2.5/Dockerfile
+++ b/5.2.5/Dockerfile
@@ -1,5 +1,4 @@
 FROM centos:7.6.1810
-LABEL Name="swift-scf"
 LABEL maintainer="YR Chen <stevapple@icloud.com>"
 LABEL description="Docker Container for Swift with Tencent SCF Custom Runtime"
 
@@ -7,10 +6,10 @@ RUN sed -e "/mirrorlist/d" \
     -e "s/#baseurl/baseurl/g" \
     -e "s/mirror.centos.org/vault.centos.org/g" \
     -e "s/\$releasever/7.6.1810/g" \
-    -i /etc/yum.repos.d/* && yum clean all -y
+    -i /etc/yum.repos.d/*.repo \
+    && yum clean all -y
 
 RUN yum install https://repo.ius.io/ius-release-el7.rpm -y \
-    && yum update -y \
     && yum install shadow-utils -y \
       binutils \
       gcc \
