--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,6 +3,10 @@ name: Nightly Autobuild
 on:
   schedule:
     - cron: '0 0 * * *'
+  push:
+    paths:
+      - 'nightly/**'
+      - 'nightly-5.5/**'
 
 jobs:
   publish:
