--- a/beta/Dockerfile
+++ b/beta/Dockerfile
@@ -2,9 +2,9 @@ FROM centos:7.6.1810
 LABEL maintainer="YR Chen <stevapple@icloud.com>"
 LABEL description="Docker Container for Swift with Tencent SCF Custom Runtime (Beta)"
 
-# Install git 2.24
-RUN yum install https://repo.ius.io/ius-release-el7.rpm -y \
-    && yum install git224 -y \
+# Install newer git and gcc
+RUN yum install centos-release-scl-rh -y \
+    && yum install rh-git227-git devtoolset-11-gcc-c++ -y \
     && yum clean all -y
 
 # Install swiftlang
