--- a/alpha/Dockerfile
+++ b/alpha/Dockerfile
@@ -15,5 +15,6 @@ RUN curl https://download.swift.org/experimental-use-only/repo/centos/releases/7
 # Print Installed Swift Version
 RUN swift --version
 
-# Activate Git and GCC installation
-SHELL [ "/usr/bin/scl", "enable", "rh-git227", "devtoolset-11" ]
+# Activate SCl installation
+COPY --chown=root:root swift-scf.sh /etc/profile.d/
+ENV ENV=/etc/profile.d/swift-scf.sh
