--- a/nightly-5.7/Dockerfile
+++ b/nightly-5.7/Dockerfile
@@ -74,4 +74,5 @@ RUN echo '[ ! -z "$TERM" -a -r /etc/motd ] && cat /etc/motd' \
     "################################################################\n" > /etc/motd
 
 # Activate Git and GCC installation
-SHELL [ "/usr/bin/scl", "enable", "rh-git227", "devtoolset-11" ]
+COPY --chown=root:root swift-scf.sh /etc/profile.d/
+ENV ENV=/etc/profile.d/swift-scf.sh
